--- a/notebooks/grobid.ipynb
+++ b/notebooks/grobid.ipynb
@@ -17,13 +17,22 @@
    "source": [
     "import multiprocessing\n",
     "\n",
+    "from bs4 import BeautifulSoup\n",
     "from grobid_client.grobid_client import GrobidClient"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2",
+   "metadata": {},
+   "source": [
+    "In the following, GROBID will produce tei.xml files containing the PDF contents to the `../data/grobid` path."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2",
+   "id": "3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +47,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3",
+   "id": "4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,9 +55,107 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "5",
+   "metadata": {},
+   "source": [
+    "The following parses the TEI outputs for relevant data."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4",
+   "id": "6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open(\"../data/grobid/sample.grobid.tei.xml\") as f:\n",
+    "    soup = BeautifulSoup(f, \"lxml-xml\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "title_stmt = soup.find(\"titleStmt\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8",
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": [
+     "keep_output"
+    ]
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Bi-criteria Algorithm for Scheduling Jobs on Cluster Platforms'"
+      ]
+     },
+     "execution_count": null,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "title_stmt.title.text"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9",
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": [
+     "keep_output"
+    ]
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[<funder>\n",
+       " <orgName type=\"full\">INRIA</orgName>\n",
+       " </funder>,\n",
+       " <funder>\n",
+       " <orgName type=\"full\">INPG</orgName>\n",
+       " </funder>,\n",
+       " <funder>\n",
+       " <orgName type=\"full\">UJF</orgName>\n",
+       " </funder>,\n",
+       " <funder>\n",
+       " <orgName type=\"full\">CNRS</orgName>\n",
+       " </funder>]"
+      ]
+     },
+     "execution_count": null,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "title_stmt.find_all(\"funder\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "10",
    "metadata": {},
    "outputs": [],
    "source": []
